force-app/main/default/objects/Payment_Object_Metadata_CS__c/Payment_Object_Metadata_CS__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Payment Object Metadata</label>
</CustomObject>