force-app/main/default/objects/Payment_Object_Metadata_CS__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>