force-app/main/default/objects/Payment_Object_Metadata_CS__c/fields/Debit_Account_Account_Master_Id__c.field-meta.xml
<CustomField>
    <fullName>Debit_Account_Account_Master_Id__c</fullName>
    <label>Debit Account Account Master Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>