force-app/main/default/objects/Payment_Object_Metadata_CS__c/fields/Other_Charges_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Type__c</fullName>
    <label>Other Charges Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>