force-app/main/default/objects/Payment_Object_Metadata_CS__c/fields/Record_type__c.field-meta.xml
<CustomField>
    <fullName>Record_type__c</fullName>
    <label>Record type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>