force-app/main/default/objects/Payment_Object_Metadata_CS__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>Account_Type__c</columns>
    <columns>Amount_Type__c</columns>
    <columns>Charge_Type__c</columns>
    <columns>Other_Charges_Type__c</columns>
    <columns>Record_type__c</columns>
    <columns>VAT_Debit_Account_Account_Master_Id__c</columns>
    <columns>Credit_Account_Account_Master_Id__c</columns>
    <columns>Debit_Account_Account_Master_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>